--- a/wp-content/themes/understrap-child/sass/theme/_wp-shopify.scss
+++ b/wp-content/themes/understrap-child/sass/theme/_wp-shopify.scss
@@ -47,7 +47,7 @@
 
 .wpshopify  .wps-product-pricing
 {
-    margin-bottom: auto;
+    margin-top: auto;
 }
 
 .wpshopify .wps-w-3 
